Fix contrast

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,7 +2,7 @@
   --color-border: #e5e5e5;
   --color-background: #fffcea;
   --color-text-primary: #1b4332;
-  --color-text-secondary: #8f8f8f;
+  --color-text-secondary: #6c6c6c;
   --font-family-monospaced: ui-monospace, sfmono-regular, consolas,
     'Liberation Mono', menlo, monospace;
 }
